deployment.yaml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: billow-server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: billow-server
  template:
    metadata:
      labels:
        app: billow-server
    spec:
      containers:
        - name: billow-server-container
          image: handher0/billow-server:0.2
          ports:
            - containerPort: 8080
