service.yaml
apiVersion: v1
kind: Service
metadata:
  name: billow-server-service
spec:
  type: NodePort
  selector:

    app: billow-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
